# EyeDetection

./: .gitignore  CMakeLists.txt  cmakeBuild.sh  readme.rtf
src/: CMakeLists.txt  captureImage.cpp  captureImage.h  constants.h  detection.cpp  detection.h  eyeCentreLocalisationByMeansOfGradients.cpp  eyeCentreLocalisationByMeansOfGradients.h  eyeDetection.cpp  eyeDetection.h  eyeLidsLocalisation.cpp  eyeLidsLocalisation.h  faceDetection.cpp  faceDetection.h  findIrisCentreWithCorrectionOfEyeROI.cpp  findIrisCentreWithCorrectionOfEyeROI.h  functions.cpp  functions.h  irisLocalisation.cpp  irisLocalisation.h  main.cpp  processArguments.cpp  processArguments.h  pupilLocalisation.cpp  pupilLocalisation.h  removeReflections.cpp  removeReflections.h  testing.cpp  testing.h
src (old)/: Draw.cpp  Draw.h  captureImage.cpp  captureImage.h  detection.cpp  detection.h  eyeDetection.cpp  eyeDetection.h  faceAndEyesDetection.cpp  faceDetection.cpp  faceDetection.h  main.cpp
