add_executable( EyeDetection main.cpp findIrisCentreWithCorrectionOfEyeROI.cpp findIrisCentreWithCorrectionOfEyeROI.h eyeCentreLocalisationByMeansOfGradients.cpp eyeCentreLocalisationByMeansOfGradients.h functions.cpp functions.h irisLocalisation.cpp irisLocalisation.h pupilLocalisation.cpp pupilLocalisation.h eyeLidsLocalisation.cpp eyeLidsLocalisation.h testing.cpp testing.h constants.h processArguments.cpp processArguments.h)
target_link_libraries(EyeDetection ${OpenCV_LIBS} )